--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -3,8 +3,10 @@ provide(:title, 'Edit Invoice')
 provide(:button_text, 'Save Changes')
 %>
 
-<h2>Edit Invoice</h2>
+<h2>Edit Invoice for patient <%= @patient.full_name %> </h2>
 
+<div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1">
 <%= render 'form' %>
+</div>
 
 
