--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -9,6 +9,7 @@
 <table class="tbl table-hover" >
   <thead>
       <tr>
+	  <th class="tbl_xs"></th>
 	  <th class="tbl_lsm"><%= sortable 'entry_ts', 'Time' %></th>
 	  <th class="tbl_md">
 	  <% if @docs.present? && @docs.size > 1 %>
