--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -1,11 +1,20 @@
 <% pat = Patient.find(visit.patient_id) rescue nil %>
 <% remote = device_is_desktop? %>
 <tr>
+	<td>
+	<% if visit.ready_to_bill? %>
+	   <i class="glyphicon glyphicon-ok-sign text-primary"></i>
+	<% elsif visit.paid? %>
+	   <i class="glyphicon glyphicon-ok-sign text-success"></i>
+	<% else %>
+	   <i class="glyphicon glyphicon-question-sign text-danger"></i>
+	<% end %>
+	</td>
 	<% if visit.date == @date %>
             <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(pat,visit) %></td>
          <% else %>
             <td><%= link_to visit.entry_ts.strftime("%d-%b"), patient_visit_path(pat,visit) %></td>
-         <%end %>
+         <% end %>
 
 	<td><%= visit.doctor.lname %></td>
 	<td><%= link_to pat.full_name, pat %></td>
