--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -4,6 +4,7 @@
 <table class="tbl table-hover"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
+	  <th class="tbl_xs"></th>
 	  <% if date  %>
             <th class="tbl_lsm"><%= sortable 'entry_ts', :Time %></th>
           <% else %>
