--- a/app/views/billings/_visit.html.erb
+++ b/app/views/billings/_visit.html.erb
@@ -3,13 +3,15 @@
 <% diagnosis = Diagnosis.find_by(code: visit.diag_code) %>
 <tr>
 	<td>
-        <% if visit.ready_to_bill? %>
+	<% if visit.ready_to_bill? %>
            <i class="glyphicon glyphicon-ok-sign text-primary"></i>
         <% elsif visit.billed_or_paid? %>
            <i class="glyphicon glyphicon-ok-sign text-success"></i>
+        <% elsif visit.has_error? %>
+           <i class="glyphicon glyphicon-exclamation-sign text-danger"></i>
         <% else %>
-           <i class="glyphicon glyphicon-question-sign text-danger"></i>
-        <% end %>
+           <i class="glyphicon glyphicon-question-sign text-warning"></i>
+        <% end %>	
         </td>
 
 	<% if date.present? %>
