--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,41 +1,73 @@
+<div class="spacer-30"></div>
+<div id='logo' style="padding:20px">
+<img src='/images/clinic.jpg' width="430px"></img>
+</div>
 
-<h1> Welcome! </h1>
+<div class="hdr-text">We are open every day!</div>
+</p>
+<p style="font-size: 13px">
 <pre>
-<b>We are open:</b>
+No appointment is needed, just come in with your health card. 
+We welcome new patients with acute and/or chronic medical conditions. 
+Clinic is wheelchair accessible. 
+We speak English, Polish, Ukrainian, Russian, Hindi, Urdu, and Punjabi.
 
-9 AM to 8 PM, Monday through Friday
-9 AM to 1 PM, on Saturdays
-9 AM to 2 PM, Sundays & Holidays
+<b>   9 AM to 8 PM, Monday through Friday
+   9 AM to 1 PM, on Saturdays
+   9 AM to 2 PM, Sundays & Holidays</b>
 
 Please make sure to arrive half an hour before closing time.
 
-Doctors’ Schedules
+Schedules are subject to change without notice. Please, call to confirm the hours.
+<b>(905) 561-9255</b>
+</pre>
+</p>
 
+<div style="width:700px; float:left; margin-left: 20px;">
+<p>
+<b>Doctors’ Schedules:</b>
+
+<ul style="line-height: 1.8em">
+
+<li>
+<b>Dr. Ostapenko:</b>
+Mondays: 2 PM – 8 PM / 9 AM - 2 PM (every second week)
+Tuesdays: 2 PM – 8 PM
+Thursdays: 2 PM – 8 PM
+Sundays: 9 AM – 2 PM
+Wednesdays: 3 PM – 8 PM
+</li>
+
+<li>
 <b>Dr. Smith:</b>
-Thursdays 9 AM – 2 PM
+Thursdays: 9 AM – 2 PM
+</li>
 
+<li>
 <b>Dr. Sabira Ahmed:</b>
-Wednesdays 9 AM – 3 PM
+Wednesdays: 9 AM – 3 PM
+</li>
 
+<li>
 <b>Dr. Samarasinghe:</b>
 Every second Monday 2 PM – 8 PM
-Tuesdays 9AM - 2 PM
-Friday 2 PM - 8 PM
+Tuesdays: 9AM - 2 PM
+Friday: 2 PM - 8 PM
+</li>
 
+<li>
 <b>Dr. Nainar:</b>
 Saturdays: 9AM - 2PM
+</li>
 
+<li>
 <b>Dr. Sadaf Ahmed:</b>
 Fridays: 9 AM - 2PM
 Every second monday 9AM - 2PM
+</li>
+</div>
+</p>
 
-<b>Dr. Ostapenko:</b>
-Mondays 2 PM – 8 PM / 9 AM - 2 PM (every second week)
-Tuesdays 2 PM – 8 PM
-Thursdays 2 PM – 8 PM
-Sundays 9 AM – 2 PM
-Wednesdays 3 PM – 8 PM
-
-Schedules are subject to change without notice. Please, call to confirm the hours.
-(905) 561-9255
-</pre>
+<div align="right">
+<img src='/images/map.png' width="250px"></img>
+</div>
