home page; invoices modal; cleanup

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -169,7 +169,7 @@ td.hlight {
   padding-top: 9px;
   font-weight: bold;
   &:hover {
-    color: white;
+    color: red;
     text-decoration: none;
   }
 }
