--- a/app/views/daily_charts/index.html.erb
+++ b/app/views/daily_charts/index.html.erb
@@ -1,11 +1,13 @@
 <% provide(:title, 'All Daily Charts') %>
+<%= render "shared/modal", size: 'lg' %>
 
 <table class="tbl table-hover"> <!-- pretty -->
   <thead>
       <tr>
-          <th><%= sortable 'date'  %></th>
-          <th><%= sortable 'filename', :FileName %></th>
-          <th><%= sortable 'pages' %></th>
+          <th><%= sortable 'filename', :Chart %></th>
+	  <th>Download</th>
+          <th><%= sortable 'date', :date  %></th>
+          <th>Pages</th>
       </tr>
   </thead>
   <tbody>
@@ -17,6 +19,6 @@
 
 <div class="bottom_buttons ">
 <%= will_paginate @daily_charts, class: "btn" %>
-<%= button_to "Add Daily Chart", new_daily_chart_path, class: "btn btn-primary col-md-12", :method => "get" %>
+<!--<# %= button_to "Add Daily Chart", new_daily_chart_path, class: "btn btn-primary col-md-12", :method => "get" %> -->
 </div>
 
