--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -36,7 +36,7 @@
           <th class="tbl_lsm">Status</th>
 	  <th class="tbl_sm">Lbl</th> 
 	  <% if date == Date.today || date.blank? %>
-            <th class="tbl_sm"></th>
+            <th class="tbl_sm">Frm</th>
             <th class="tbl_sm"></th>
 	  <% end %>
 	  <% if current_user.admin? %>
