--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 </p>
 <p style="font-size: 13px">
 <pre>
-No appointment is needed, just come in with your health card. 
+No appointment is necessary, just come in with your health card. 
 We welcome new patients with acute and/or chronic medical conditions. 
 Clinic is wheelchair accessible. 
 We speak English, Polish, Ukrainian, Russian, Hindi, Urdu, and Punjabi.
