--- a/app/views/daily_charts/_daily_chart.html.erb
+++ b/app/views/daily_charts/_daily_chart.html.erb
@@ -1,12 +1,7 @@
      <tr>
-	<td><%= link_to "#{daily_chart.filename}", daily_chart, target: 'Form' %> </td>
+	<td><%= link_to daily_chart.filename, daily_chart, remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+	<td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, daily_chart  %></td>
 	<td><%= daily_chart.date %></td> 
 	<td><%= daily_chart.pages %> </td> 
      </tr>
-
-
-<%#  <% if current_user.admin?  %>
-<%#    | <%= link_to "delete", patient, method: :delete,
-<%#                                  data: { confirm: "You sure?" } %>
-<%#  <% end %>
 
