--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -65,8 +65,16 @@ Saturdays: 9AM - 2PM
 Fridays: 9 AM - 2PM
 Every second monday 9AM - 2PM
 </li>
+
+<li>
+<b>Dr. Ubhi: </b>
+Wednesdays: 2 PM - 8 PM
+Thursdays: 9 AM - 2PM
+</li>
 </div>
 </p>
+</ul>
+
 
 <div align="right">
 <img src='/images/map.png' width="250px"></img>
