home page - minor changes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="spacer-30"></div>
+<div class="spacer-10"></div>
 <div id='logo' style="padding:20px">
 <img src='/images/clinic.jpg' width="430px"></img>
 </div>
@@ -7,10 +7,9 @@
 </p>
 <p style="font-size: 13px">
 <pre>
-No appointment is necessary, just come in with your health card. 
-We welcome new patients with acute and/or chronic medical conditions. 
-Clinic is wheelchair accessible. 
-We speak English, Polish, Ukrainian, Russian, Hindi, Urdu, and Punjabi.
+No appointment is necessary, just come in with your health card
+We welcome new patients with acute and/or chronic medical conditions 
+We speak English, Polish, Ukrainian, Russian, Hindi, Urdu, Punjabi
 
 <b>   9 AM to 8 PM, Monday through Friday
    9 AM to 1 PM, on Saturdays
@@ -18,7 +17,7 @@ We speak English, Polish, Ukrainian, Russian, Hindi, Urdu, and Punjabi.
 
 Please make sure to arrive half an hour before closing time.
 
-Schedules are subject to change without notice. Please, call to confirm the hours.
+Schedules are subject to change without notice. Please, call to confirm
 <b>(905) 561-9255</b>
 </pre>
 </p>
@@ -27,7 +26,7 @@ Schedules are subject to change without notice. Please, call to confirm the hour
 <p>
 <b>Doctors’ Schedules:</b>
 
-<ul style="line-height: 1.8em">
+<ul style="line-height: 1.6em">
 
 <li>
 <b>Dr. Ostapenko:</b>
@@ -75,7 +74,6 @@ Thursdays: 9 AM - 2PM
 </p>
 </ul>
 
-
-<div align="right">
-<img src='/images/map.png' width="250px"></img>
+<div align="right" style="padding:0; margin:0">
+<img src='/images/map.png' width="230px"></img>
 </div>
