--- a/app/views/daily_charts/index.html.erb
+++ b/app/views/daily_charts/index.html.erb
@@ -5,9 +5,11 @@
   <thead>
       <tr>
           <th><%= sortable 'filename', :Chart %></th>
-	  <th>Download</th>
           <th><%= sortable 'date', :date  %></th>
           <th>Pages</th>
+	  <th>Size(M)</th>
+	  <th>Created</th>
+	  <th>Download</th>
       </tr>
   </thead>
   <tbody>
