--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -19,7 +19,7 @@
           <th>Phone</th>
  	  <th class="tbl_sm">Lbl</th>
           <th class="tbl_sm"></th>
-	  <%=  "<th></th>".html_safe if current_user.admin? %>
+	  <%= "<th class='tbl_sm'></th>".html_safe if current_user.admin? %>
       </tr>
   </thead>
   <tbody>
