--- a/app/views/paystubs/_paystub.html.erb
+++ b/app/views/paystubs/_paystub.html.erb
@@ -1,6 +1,6 @@
 <tr>
-<% if paystub.filespec.present? && File.exists?(paystub.filespec) %>
-  <td><%= link_to paystub.id, paystub_path(paystub),  remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+<% if paystub.filespec.present? && File.exists?(paystub.filespec) && device_is_desktop? %>
+  <td><%= link_to paystub.id, paystub_path(paystub),  remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
 <% else %>
   <td><%= paystub.id %></td>
 <% end %>
