--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -7,6 +7,7 @@
  <li class="divider"></li>
  <li><%= link_to "Doctors", doctors_path %> </li>
  <li><%= link_to "Export Files", export_files_path %> </li>
+ <li><%= link_to "EDT Files", edt_files_path  %> </li> 
  <li><%= link_to "Claims", claims_path  %> </li> 
  <li><%= link_to "Budget", budget_path  %> </li> 
  <li><%= link_to "Logout", logout_path, method: :delete %></li>
