services added to index template

--- a/app/views/edt_files/index.html.erb
+++ b/app/views/edt_files/index.html.erb
@@ -11,8 +11,8 @@
           <th class='tbl_md'>File</th>
 	  <th>Download</th>
 	  <th><%= sortable 'upload_date', 'Uploaded' %></th>
-          <th class='tbl_md'>Lines</th>
 	  <th cless='tbl_md'>Claims</th>
+          <th class='tbl_md'>Services</th>
 	  <th cless='tbl_md'>TTL</th>
 	   <% if current_user.admin?  %>
           <th class='tbl_sm'></th>
