--- a/app/views/edt_files/_edt_file.html.erb
+++ b/app/views/edt_files/_edt_file.html.erb
@@ -15,8 +15,8 @@
 	   <td class='tbl_md'><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_edt_file_path(edt_file)  %></td>
 	<% end %>
         <td><%= edt_file.upload_date %></td>
-	<td><%= edt_file.lines %></td>
 	<td cless='tbl_sm'><%= edt_file.claims %></td>
+	<td><%= edt_file.services %></td>
 	<td cless='tbl_sm'><%= sprintf("$%.2f",edt_file.total_amount) %></td>
   	<% if current_user.admin?  %>
 	   <td> <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, edt_file, metdod: :delete, data: { confirm: "Are you sure you want to delete #{edt_file.filename}?" } %> </td>
