--- a/app/views/edt_files/_show.html.erb
+++ b/app/views/edt_files/_show.html.erb
@@ -8,7 +8,7 @@
 	<b class="modal-title" id="myModalLabel">Dr. <%= @doctor.lname %>: File  <%= @edt_file.filename %> Uploaded <%= @edt_file.upload_date %>; <%= @edt_file.claims %> claims, total: <%= sprintf("$%.2f",@edt_file.total_amount) %></b>
 </div>
 <div class="modal-body">
-	<iframe id="myModal" src="/EDT/<%= @edt_file.filename %>" frameborder="0" width="100%" height="600px"></iframe>
+	<iframe id="myModal" src="/edt_files/<%= @edt_file.id %>" frameborder="0" width="100%" height="600px"></iframe>
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
