--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -1,14 +1,17 @@
 <% provide(:title, 'All Forms') %>
+<%= render 'shared/modal', size: 'lg' %>
 
 <table class="tbl table-hover" >
   <thead>
       <tr>
-	  <th>Id</th>
+	  <th>#</th>
 	  <th>Name</th>
-	  <th>Description</th>
-	  <th>Type</th>
+	  <th class="tbl_lg">Description</th>
+	  <th class="tbl_lsm"class="tbl_lsm">Type</th>
 	  <th>File Name</th>
 	  <th>Format</th>
+	  <th>Fillable?</th>
+	  <th></th>
 	  <th></th>
 	<% if current_user.admin?  %>
 	  <th></th>
