--- a/app/views/invoices/_show.html.erb
+++ b/app/views/invoices/_show.html.erb
@@ -7,7 +7,7 @@
 	<b class="modal-title" id="myModalLabel">Patient <%= @invoice.patient.lname %>,  Invoice To:  <%= @invoice.provider.name %></b>
 </div>
 <div class="modal-body">
-	<iframe id="myModal" src="/invoices/<%= @invoice.filename %>" frameborder="0" width="100%" height="600px"></iframe>
+	<iframe id="myModal" src="/invoices/<%= @invoice.id %>" frameborder="0" width="100%" height="600px"></iframe>
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
