--- a/app/views/paystubs/_show.html.erb
+++ b/app/views/paystubs/_show.html.erb
@@ -8,7 +8,7 @@
 	<b class="modal-title" id="myModalLabel"><%= @doctor.lname %>: Paystub for <%= @paystub.mon_year_str %></b>
 </div>
 <div class="modal-body">
-	<iframe id="myModal" src="/paystubs/<%= @paystub.filename %>" frameborder="0" width="100%" height="600px"></iframe>
+	<iframe id="myModal" src="/paystubs/<%= @paystub.id %>" frameborder="0" width="100%" height="600px"></iframe>
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
