missed column in edt; charts changed to work without symlink in public; status now set to BILLED after edt export

--- a/app/views/daily_charts/_show.html.erb
+++ b/app/views/daily_charts/_show.html.erb
@@ -7,7 +7,7 @@
 	<b class="modal-title" id="myModalLabel">Day Charts for <%= @chart.date %>: <%= @chart.pages %> pages</b>
 </div>
 <div class="modal-body">
-	<iframe id="myModal" src="/charts/<%= @chart.rel_path %>" frameborder="0" width="100%" height="600px"></iframe>
+	<iframe id="myModal" src="/daily_charts/<%= @chart.id %>" frameborder="0" width="100%" height="600px"></iframe>
 </div>
 <div class="modal-footer">
   <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
