--- a/app/views/edt_files/_edt_file.html.erb
+++ b/app/views/edt_files/_edt_file.html.erb
@@ -9,15 +9,15 @@
         <td><%= edt_file.ftype_str %></td>
         <td class='tbl_md'><%= doc.lname %></td>
 	<td class='tbl_md'><%= edt_file.filename %></td>
-	<% if edt_file.filespec.present? && File.exists?(edt_file.filespec) %>
-           <td class='tbl_md'><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_edt_file_path(edt_file)  %></td>
-        <% else %>
-	   <td class='tbl_md'><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_edt_file_path(edt_file)  %></td>
-	<% end %>
         <td><%= edt_file.upload_date %></td>
 	<td cless='tbl_sm'><%= edt_file.claims %></td>
 	<td><%= edt_file.services %></td>
 	<td cless='tbl_sm'><%= sprintf("$%.2f",edt_file.total_amount) %></td>
+	<% if edt_file.filespec.present? && File.exists?(edt_file.filespec) %>
+           <td class='tbl_sm'><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_edt_file_path(edt_file)  %></td>
+        <% else %>
+	   <td class='tbl_sm'><%= link_to '<i class="glyphicon glyphicon-question-sign"></i>'.html_safe, download_edt_file_path(edt_file)  %></td>
+	<% end %>
   	<% if current_user.admin?  %>
 	   <td> <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, edt_file, metdod: :delete, data: { confirm: "Are you sure you want to delete #{edt_file.filename}?" } %> </td>
 	<% end %>
