--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -72,7 +72,7 @@ table {
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
     color: #FFF;
-#    background-color: #333;
+//    background-color: #333;
 }
 
 .spacer-10 {
